--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,9 @@ django-cors-headers==4.7.0
 django-filter==25.1
 django-js-asset==3.1.2
 djangorestframework==3.16.0
+dotenv==0.9.9
 Markdown==3.8.2
 pillow==11.3.0
+python-dotenv==1.1.1
 sqlparse==0.5.3
 tzdata==2025.2
